# camp

./: .clang-format  .dockerignore  .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  CMakeLists_issue18.txt  COPYING  ChangeLog  Dockerfile  Dockerfile.debug  Dockerfile.docs  Dockerfile.intel  Dockerfile.mpi  Doxyfile  Makefile  README.md  TODO  Untitled.ipynb  index.html  install.sh  one_configuration_to_rule_them_all.json  run.sh  valgrind.supp
compile/power9/: CMakeLists.txt  Makefile  README.md  check.sh  clone_cvode.sh  compile.camp.power9.sh  compile.camp.sh  compile.cvode-3.4-alpha.power9.sh  compile.cvode.camp.sh  compile.json-fortran-6.1.0.power9.sh  compile.libs.camp.sh  compile.suiteSparse.power9.sh  config_variables_c_solver.txt  copy_bashrc.sh  cuda_memcheck.sh  cvode.camp.run.sh  cvode.camp.sh  debug.camp.diff.sh  debug.cvode.camp.diff.sh  diff.sh  diff.txt  diff_main.sh  gcc.compile.camp.power9.sh  gcc.compile.cvode-3.4-alpha.power9.sh  gcc.make.cvode-3.4-alpha.power9.sh  klu_example.sh  make.camp.power9.sbatch.sh  make.camp.power9.sh  make.camp.sh  make.cvode.camp.sh  make.run.sh  new_make.sh  only_make.sh  opt_make.camp.power9.sh  portability.md  remake.camp.sh  remake.cvode.camp.sh  removeTextAndCheck.sh  run.sh  sbatch.make.camp.power9.sh  (+4 more)
src/: CMakeLists.txt  Jacobian.c  Jacobian.h  aero_binned.F90  aero_data.F90  aero_dist.F90  aero_info.F90  aero_info_array.F90  aero_mode.F90  aero_particle.F90  aero_particle_array.F90  aero_phase_data.F90  aero_phase_solver.c  aero_phase_solver.h  aero_rep_data.F90  aero_rep_factory.F90  aero_rep_solver.c  aero_rep_solver.h  aero_reps.h  aero_sorted.F90  aero_state.F90  aero_weight.F90  aero_weight_array.F90  bin_average_comp.F90  bin_average_size.F90  bin_grid.F90  camp_box_model.F90  camp_box_model_data.F90  camp_common.h  camp_core.F90  camp_debug.c  camp_debug.h  camp_interface.F90  camp_solver.c  camp_solver.h  camp_solver_data.F90  camp_state.F90  chamber.F90  chem_spec_data.F90  coag_kernel.F90  (+64 more)
src/aero_reps/: CMakeLists.txt  aero_rep_modal_binned_mass.F90  aero_rep_modal_binned_mass.c  aero_rep_single_particle.F90  aero_rep_single_particle.c  aero_rep_single_particle_layers.F90  aero_rep_single_particle_layers.c  layer_aero_rep_array_test.F90  layer_state_id_array_test.F90  num_phase_array_test.F90  ordered_function_test.F90
src/cuda/: Jacobian_gpu.cu  Jacobian_gpu.h  LICENSE  camp_gpu_solver.cu  camp_gpu_solver.h  cuda_math.h  cuda_structs.h  cuda_structs_d2.h  cusolver.cu  cusolver.h  cvode_cpu.cu  cvode_cpu.h  cvode_cuda.cu  cvode_cuda.h  cvode_cuda_d2.cu  cvode_cuda_d2.h  cvode_dev.h  cvode_gpu.cu  cvode_gpu.h  cvode_gpu2.cu  cvode_gpu2.h  cvode_gpu_d2.cu  cvode_gpu_d2.h  cvode_init.cu  cvode_interface.cu  cvode_interface.h  cvode_ls_gpu.cu  cvode_ls_gpu.h  itsolver_gpu.cu  itsolver_gpu.h  libsolv.cu  libsolv.h  new.cu  new.h  rxns_gpu.h  time_derivative_gpu.cu  time_derivative_gpu.h
src/debug_and_stats/: camp_debug_2.F90  camp_debug_2.c  camp_debug_2.f90  camp_debug_2.h  cvode_debug.c  cvode_debug.h  new.c  new.h
src/openmp/: itsolver_gpu.c  itsolver_gpu.h  openmp.c  openmp.h
src/packaging/: CMakeLists.txt
src/rxns/: CMakeLists.txt  rxn_CMAQ_H2O2.F90  rxn_CMAQ_H2O2.c  rxn_CMAQ_OH_HNO3.F90  rxn_CMAQ_OH_HNO3.c  rxn_HL_phase_transfer.F90  rxn_HL_phase_transfer.c  rxn_SIMPOL_phase_transfer.F90  rxn_SIMPOL_phase_transfer.c  rxn_aqueous_equilibrium.F90  rxn_aqueous_equilibrium.c  rxn_arrhenius.F90  rxn_arrhenius.c  rxn_condensed_phase_arrhenius.F90  rxn_condensed_phase_arrhenius.c  rxn_condensed_phase_diffusion.F90  rxn_condensed_phase_diffusion.c  rxn_condensed_phase_photolysis.F90  rxn_condensed_phase_photolysis.c  rxn_emission.F90  rxn_emission.c  rxn_first_order_loss.F90  rxn_first_order_loss.c  rxn_isomerisation.F90  rxn_isomerisation.c  rxn_photolysis.F90  rxn_photolysis.c  rxn_raoult_phase_transfer.F90  rxn_raoult_phase_transfer.c  rxn_surface.F90  rxn_surface.c  rxn_ternary_chemical_activation.F90  rxn_ternary_chemical_activation.c  rxn_troe.F90  rxn_troe.c  rxn_vbs_nox_dependent.F90  rxn_vbs_nox_dependent.c  rxn_wennberg_no_ro2.F90  rxn_wennberg_no_ro2.c  rxn_wennberg_tunneling.F90  (+3 more)
src/sub_models/: CMakeLists.txt  sub_model_PDFiTE.F90  sub_model_PDFiTE.c  sub_model_UNIFAC.F90  sub_model_UNIFAC.c  sub_model_ZSR_aerosol_water.F90  sub_model_ZSR_aerosol_water.c
test/: CMakeLists.txt  camp_box_model.F90  camp_box_model_data.F90  test_common.h
test/additive/: test_additive_1.sh  test_additive_2.sh
test/average/: test_average_01.sh  test_average_02.sh  test_average_03.sh  test_average_04.sh  test_average_05.sh  test_average_06.sh  test_average_07.sh  test_average_08.sh  test_average_09.sh  test_average_10.sh  test_average_11.sh  test_average_12.sh  test_average_13.sh  test_average_14.sh  test_average_15.sh  test_average_16.sh  test_average_17.sh  test_average_18.sh  test_average_19.sh  test_average_20.sh
test/bidisperse/: test_bidisperse_1.sh  test_bidisperse_ode.F90
test/binned_gpu/: TestMonarch.py  camp_monarch_interface.F90  error.json  mainMonarch.py  mock_monarch.F90  run.sh
test/boxmodel/: error.json  fort.7  full_multiphase  interface_boxmodel.json  my_config_file.json  output.txt  pbl_height.csv  run_boxmodel_v2.sh  subset-photochemical-smog.json  temperature.csv  water.json
test/brownian/: test_brownian_1.sh  test_brownian_2.sh  test_brownian_3.sh  test_brownian_4.sh
test/chemistry/: CMakeLists.txt  config_1.json  consecutive.json  simple_monarch_2_domain.json  test_chem_mech_solver.F90  test_chemistry_1.sh
test/condense/: test_condense_1.sh  test_condense_2.sh
test/emission/: test_emission_1.sh  test_emission_2.sh  test_emission_3.sh
test/fractal/: test_fractal_2.sh  test_fractal_3.sh  test_fractal_dimless_time.F90  test_fractal_radii_conversion.F90  test_fractal_self_preserve.F90
test/loss/: test_loss_01.sh  test_loss_02.sh  test_loss_03.sh  test_loss_04.sh  test_loss_05.sh  test_loss_06.sh  test_loss_07.sh  test_loss_08.sh  test_loss_09.sh  test_loss_10.sh  test_loss_11.sh  test_loss_12.sh
test/monarch/: CMakeLists.txt  README.md  TestMonarch.json  a.py  (+76 more)
(+8055 files in other folders)
